# computer-says-no

./: .gitignore  .pre-commit-config.yaml  .typos.toml  CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md  _typos.toml  cog.toml  install.sh  justfile  release-plz.toml
.claude/: settings.json
.claude/commands/: speckit.cleanup.md  speckit.drift.md  speckit.verify.md
.claude/hooks/: user-frustration-check.sh
.github/: CODEOWNERS
.github/workflows/: ci.yml  release.yml
.specify/: extensions.yml
.specify/extensions/: .registry
.specify/extensions/.cache/: catalog-ebf165086500aab1-metadata.json  catalog-ebf165086500aab1.json
.specify/extensions/sync/: README.md  extension.yml
.specify/extensions/sync/commands/: analyze.md
.specify/memory/: constitution.md
datasets/: commit-types.json  corrections.json  intent.json  pushback.json  sentiment.json  topic-routing.json
docs/: spec-dependency-graph.md
reference-sets/: commit-types.toml  corrections.toml  intent.toml  sentiment.toml  topic-routing.toml
scripts/: manual-benchmark.sh  train_classifier.py  train_classifier_v2.py  train_classifier_v3.py  train_classifier_v4.py
specs/001-core-binary-cli/: data-model.md  plan.md  quickstart.md  research.md  retrospective.md  spec.md  tasks.md
specs/001-core-binary-cli/checklists/: requirements.md
specs/001-core-binary-cli/contracts/: cli.md  rest-api.md
specs/002-model-benchmark-harness/: data-model.md  plan.md  quickstart.md  research.md  retrospective.md  spec.md  tasks.md
specs/002-model-benchmark-harness/checklists/: requirements.md
specs/002-model-benchmark-harness/contracts/: cli.md
specs/003-mlp-classifier/: data-model.md  plan.md  quickstart.md  research.md  retrospective.md  spec.md  tasks.md
specs/003-mlp-classifier/checklists/: requirements.md
specs/003-mlp-classifier/contracts/: classify.md  config.md
specs/004-mcp-sse/: data-model.md  plan.md  quickstart.md  research.md  retrospective.md  spec.md  tasks.md
specs/004-mcp-sse/checklists/: requirements.md
specs/004-mcp-sse/contracts/: mcp-tools.md
specs/005-lazy-daemon/: data-model.md  plan.md  quickstart.md  research.md  retrospective.md  spec.md  tasks.md
specs/005-lazy-daemon/checklists/: requirements.md
specs/005-lazy-daemon/contracts/: socket-protocol.md
specs/007-char-ngram-features/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/007-char-ngram-features/checklists/: requirements.md
specs/008-mlp-multi-category/: data-model.md  plan.md  research.md  spec.md  tasks.md
specs/008-mlp-multi-category/checklists/: requirements.md  spec-quality.md
src/: benchmark.rs  classifier.rs  client.rs  config.rs  daemon.rs  dataset.rs  embedding_cache.rs  main.rs  mcp.rs  mlp.rs  model.rs  reference_set.rs  server.rs  watcher.rs
tests/: benchmark_test.rs  hook_parsing_test.sh  integration_test.rs
