[package]
name = "computer-says-no"
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"
description = "Local embedding service for text classification using ONNX models"
repository = "https://github.com/srobroek/computer-says-no"
homepage = "https://github.com/srobroek/computer-says-no"
readme = "README.md"
keywords = ["embedding", "classification", "onnx", "nlp", "cli"]
categories = ["command-line-utilities", "text-processing", "science"]

[[bin]]
name = "csn"
path = "src/main.rs"

[dependencies]
fastembed = "5.13"
tokio = { version = "1", features = ["full"] }
axum = "0.8"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
notify = { version = "7", default-features = false, features = ["macos_fsevent"] }
directories = "6"
reqwest = { version = "0.12", default-features = false, features = ["json", "blocking", "rustls-tls"] }
blake3 = "1"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
comfy-table = "7"
indicatif = "0.17"

[profile.release]
opt-level = 3
lto = true
strip = true
